# bist-market-monitor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cv.md  data-flow.md  decisions.md  demo-script.md  deployment.md  interview-guide.md  linkedin-post.md  portfolio.md  roadmap.md
src/tavan_takip/: config.py  main.py  runner.py
src/tavan_takip/application/: __init__.py  backfill.py  cli.py  dashboard.py  monitoring.py  runner.py
src/tavan_takip/dashboard/: __init__.py  app.py
src/tavan_takip/dashboard/static/: dashboard.css
src/tavan_takip/dashboard/templates/: alerts.html  (+4 more)
src/tavan_takip/data_providers/: __init__.py  algolab_mock_provider.py  base.py  factory.py  yfinance_provider.py
src/tavan_takip/domain/: __init__.py  ceiling.py  market_quote.py  tracking.py
src/tavan_takip/market/: __init__.py  session.py
src/tavan_takip/notifications/: __init__.py  base.py  telegram.py
src/tavan_takip/persistence/: __init__.py  base.py  sqlite.py
src/tavan_takip/scheduler/: __init__.py  policy.py
tests/unit/: test_betae_limit_up_regression.py  test_ceiling_detection.py  test_cli.py  test_config.py  test_dashboard.py  test_data_provider_factory.py  test_ipo_tracking.py  test_market_quote.py  test_market_session.py  test_monitoring_orchestrator.py  test_monitoring_schedule_policy.py  test_production_runner.py  test_sqlite_persistence.py  test_telegram_notifications.py  test_yfinance_provider.py
