[project]
name = "tavan-takip"
version = "1.0.0"
description = "BIST halka arz takip ve tavan bozulma alarm sistemi"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "pandas>=2.2",
    "pydantic-settings>=2.3",
    "tenacity>=8.2",
    "uvicorn>=0.30",
    "yfinance>=0.2",
]

[project.scripts]
tavan-takip = "tavan_takip.main:main"
tavan-takip-dashboard = "tavan_takip.dashboard.app:main"
tavan-takip-runner = "tavan_takip.runner:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "freezegun>=1.4",
    "httpx>=0.27",
    "pandas-stubs>=2.2",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tavan_takip.dashboard" = ["templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true
